--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.20.0",
     "polished": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
